<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Inisiar Sesión</string>
    <string name="text_create_account">Si aún no tienes cuenta, regístrate aquí.</string>
    <string name="text_go_login">Si ya dispone de una cuenta, inicie secion aqui</string>
    <string name="hint_userName">Nombre de usuario</string>
    <string name="btn_signUp">REGISTRARSE</string>
</resources>